--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "fast-xml-parser": "^4.3.1",
     "jsdom": "^22.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.20",
